*Empty MediaWiki Message*

--- a/Yakobo.mw
+++ b/Yakobo.mw
@@ -1,3 +1,5 @@
+[[File:Jacob wrestling the angel 2.jpg|thumb|250px|<font color="green">Yakobo</font>]]
+
 '''Yakobo''', Umuhungu wa Izaki. Akaba yarabyaye abana 12, ariyo miryango 12 y'Abisraeli
 
 [[Category:Iyobokamana]] 
