*Empty MediaWiki Message*

--- a/Pariki_y’Igihugu_y’Ibirunga.mw
+++ b/Pariki_y’Igihugu_y’Ibirunga.mw
@@ -1,24 +1,24 @@
 [[File:Nyiragongo2004.jpg |thumb|250px|<font color="green">Pariki y’Igihugu y’Ibirunga</font>]]
 [[File:Virunga 03.jpg|thumb|250px|<font color="green">Pariki y’Igihugu y’Ibirunga</font>]]
 
-'''Pariki y’Igihugu y’Ibirunga'''<ref>[http://news.igihe.org/ubukerarugendo_news.php?groupid=2&news_cat_id=2&news_id=9092 Amateka n’ imiterere bya Pariki y’Igihugu y’Ibirunga]</ref> cyangwa  '''Pariki y’Ibirunga'''<ref>[http://www.rwandagateway.org/rw/spip.php?article56 Amapariki]</ref> yemejwe bwa mbere mu mwaka wa 1925. Muri icyo gihe yari agace gato hagati y‘ ibirunga bya Kalisimbi, Bisoke na Mikeno. Niyo pariki nkuru y’ igihugu yashinzwe bwa mbere muri [[Afurika]].
+'''Pariki y’Igihugu y’Ibirunga'''<ref>[http://news.igihe.org/ubukerarugendo_news.php?groupid=2&news_cat_id=2&news_id=9092 Amateka n’ imiterere bya Pariki y’Igihugu y’Ibirunga]</ref> cyangwa  '''Pariki y’Ibirunga'''<ref>[http://www.rwandagateway.org/rw/spip.php?article56 Amapariki]</ref> yemejwe bwa mbere mu mwaka wa 1925. Muri icyo gihe yari agace gato hagati y’ibirunga bya Kalisimbi, Bisoke na Mikeno. Niyo [[pariki]] nkuru y’igihugu yashinzwe bwa mbere muri [[Afurika]].
 
 [[File:BlueMonkey.jpg|thumb|left|200px|<font color="green">Inkima</font>]]
 
-Mu mwaka wa 1929 iyo pariki yongerewe ubunini kuko yahise ifata ubutaka bw’ U [[Rwanda]] ndetse na Congo Mbiligi ariyo [[Repubulika Iharanira Demokarasi ya Congo]] uyu munsi. Icyo gihe iyi pariki yahise igira ubuso bungana na 8090 km2, ibyo byakozwe mu rwego rwo kuyihinduramo Parc Albert yacungwaga n’ abakoloni b’ Ababiligi dore ko ari nabo bakoronizaga ibyo bihugu byombi.
+Mu mwaka wa 1929 iyo pariki yongerewe ubunini kuko yahise ifata ubutaka bw’ U [[Rwanda]] ndetse na Congo Mbiligi ariyo [[Repubulika Iharanira Demokarasi ya Congo]] uyu munsi. Icyo gihe iyi pariki yahise igira ubuso bungana na 8090 km2, ibyo byakozwe mu rwego rwo kuyihinduramo Parc Albert yacungwaga n’abakoloni b’Ababiligi dore ko ari nabo bakoronizaga ibyo bihugu byombi.
 
-Nyuma y’ uko Congo ibonye ubwingenge mu 1960 ndetse n’ U Rwanda mu 1962, Pariki y’ Igihugu y’ Ibirunga yahise icikamo ibice bibiri, buri gihugu kigira agace gicunga, ku ruhande rw’ U Rwanda iyo pariki yahise itangira kugabanuka ubunini kuko abaturage batangiye kuyisatira bashaka aho gutura no guhinga.
+Nyuma y’uko Congo ibonye ubwingenge mu 1960 ndetse n’U Rwanda mu 1962, Pariki y’Igihugu y’Ibirunga yahise icikamo ibice bibiri, buri gihugu kigira agace gicunga, ku ruhande rw’U Rwanda iyo pariki yahise itangira kugabanuka ubunini kuko abaturage batangiye kuyisatira bashaka aho gutura no guhinga.
 
-Mu mwaka wa 1967 iyi pariki yabaye intangiriro y’ ubushakashatsi ku ngagi bw’ Umunyamerikakazi wabaye ikirangirire mu bushakashatsi bw’ ibidukikije, Diana Fossey. Akigera muri Pariki y’ Igihugu y’ Ibirunga yahise atangiza ikigo cy’ ubushakashatsi yise Karisoke Research Centre, hagati ya Karisimbi na Bisoke. Guhera ubwo, igihe cye kinini yagifataga muri pariki, kandi akeshwa kuba yarahesheje agaciro ingagi zo mu Rwanda, asaba ko zitabwaho ku rwego mpuzamahanga.
+Mu mwaka wa 1967 iyi pariki yabaye intangiriro y’ubushakashatsi ku ngagi bw’ Umunyamerikakazi wabaye ikirangirire mu bushakashatsi bw’ibidukikije, Diana Fossey. Akigera muri Pariki y’Igihugu y’Ibirunga yahise atangiza ikigo cy’ubushakashatsi yise Karisoke Research Centre, hagati ya Karisimbi na Bisoke. Guhera ubwo, igihe cye kinini yagifataga muri pariki, kandi akeshwa kuba yarahesheje agaciro ingagi zo mu Rwanda, asaba ko zitabwaho ku rwego mpuzamahanga.
 
-Diana Fossey yiciwe mu rugo iwe mu mwaka w’1985, azize abashimusi batazwi yari amaze igihe akumira, ahambwa muri pariki y’ Ibirunga hafi y’ ikigo cy’ubushakashatsi yari yarashinze.
+Diana Fossey yiciwe mu rugo iwe mu mwaka w’1985, azize abashimusi batazwi yari amaze igihe akumira, ahambwa muri pariki y’Ibirunga hafi y’ikigo cy’ubushakashatsi yari yarashinze.
 
 
-Pariki y’ Igihugu y’ Ibirunga yaje kubamo umutekano mucye ubwo intambara yatangiraga hagati y’ abahoze ari ingabo z’ U Rwanda n’ ingabo za FPR- Inkotanyi, ku buryo mu mwaka wa 1992 hagabwe igitero ku cyicaro gikuru cy’ iyo pariki biza gutuma ibikorwa bya ba mukerarugendo ndetse n’ ubushakashatsi bwakorerwaga muri iyo parike bihagarara. Ibikorwa by’ umutekano mucye byarakomeje bitewe n’ abahoze mu ngabo zatsinzwe bacengeraga baturutse muri Congo ihana imbibe n’ U Rwanda mu majyaruguru. Ibyo bikorwa by’ ubugizi bwa nabi byahagaze mu 1999 bihoshejwe burundu n’ ingabo z’ igihugu cy’ U Rwanda.
+Pariki y’Igihugu y’Ibirunga yaje kubamo umutekano mucye ubwo intambara yatangiraga hagati y’abahoze ari ingabo z’U Rwanda n’ingabo za FPR- Inkotanyi, ku buryo mu mwaka wa 1992 hagabwe igitero ku cyicaro gikuru cy’iyo pariki biza gutuma ibikorwa bya ba mukerarugendo ndetse n’ubushakashatsi bwakorerwaga muri iyo parike bihagarara. Ibikorwa by’umutekano mucye byarakomeje bitewe n’abahoze mu ngabo zatsinzwe bacengeraga baturutse muri Congo ihana imbibe n’U Rwanda mu majyaruguru. Ibyo bikorwa by’ubugizi bwa nabi byahagaze mu 1999 bihoshejwe burundu n’ingabo z’igihugu cy’U Rwanda.
 
 [[File:Male gorilla in SF zoo.jpg|thumb|200px|<font color="green">Ingagi (gabo)</font>]]
 
-Iyi pariki irimo urusobe rw’ ibinyabuzima nk’ [[ibimera]] ndetse n’ inyamaswa. Ibimera bigenda bitandukana bitewe n’ubutumburuke. Hari ishyamba ry’imisozi migufi (igice cyaryo kinini cyarahinzwe). Hagati ya metero 2400 na 2500 z’ubutumburuke, hari ishyamba ryo mu bwoko bwa Neoboutonia, naho ku butumburuke bwa metero 2500 kugeza kuri 3200 hari ishyamba ry’ urugano rwo mu bwoko bwa Arundinaria alpine, riri ku buso bubarirwa kuri 30% bya pariki yose.
+Iyi pariki irimo urusobe rw’ibinyabuzima nk’[[ibimera]] ndetse n’inyamaswa. Ibimera bigenda bitandukana bitewe n’ubutumburuke. Hari ishyamba ry’imisozi migufi (igice cyaryo kinini cyarahinzwe). Hagati ya metero 2400 na 2500 z’ubutumburuke, hari ishyamba ryo mu bwoko bwa Neoboutonia, naho ku butumburuke bwa metero 2500 kugeza kuri 3200 hari ishyamba ry’urugano rwo mu bwoko bwa Arundinaria alpine, riri ku buso bubarirwa kuri 30% bya pariki yose.
 
 [[File:Tragelaphus scriptus (male).jpg|thumb|left|200px|<font color="green">impongo ♀(''Tragelaphus scriptus'')</font>]]
 
@@ -28,7 +28,7 @@ Ibimera byo ku butumburuke bubarirwa hagati ya metero 3500 na 4200, rigaragaramo
 
 Hagaragara kandi igisambu cy’ibyatsi binini ndetse n’icy’ibito, ishyamba risanzwe n’ibiyaga bito, ariko ibi byose bibarirwa ku buso buto.
 
-Mu rwego rw’ isi, iyi pariki izwi cyane ku ngagi zo mu misozi (''Gorilla beringei''). Izindi nyamaswa z’ inyamabere zigaragara muri iyi pariki ni: Inguge zo mu bwoko bwa [[inkima]]  (''Cercopithecus mitis kandti''); [[inzovu]] (''Syncerus caffer''); impyisi z’ amabara zo mu bwoko bwa ''Crocuta'' na [[impongo]] (''Tragelaphus scriptus''). Iyi pariki kandi irimo inzovu n’ubwo ari nke. Harimo amoko 178 y’ [[inyoni]], byibura 13 muri yo na 16 y’ ibisanira byayo akaba ari yo aboneka cyane mu birunga no mu misozi ya Rwenzori. 
+Mu rwego rw’ isi, iyi pariki izwi cyane ku ngagi zo mu misozi (''Gorilla beringei''). Izindi nyamaswa z’inyamabere zigaragara muri iyi pariki ni: Inguge zo mu bwoko bwa [[inkima]]  (''Cercopithecus mitis kandti''); [[inzovu]] (''Syncerus caffer''); impyisi z’amabara zo mu bwoko bwa ''Crocuta'' na [[impongo]] (''Tragelaphus scriptus''). Iyi pariki kandi irimo inzovu n’ubwo ari nke. Harimo amoko 178 y’[[inyoni]], byibura 13 muri yo na 16 y’ibisanira byayo akaba ari yo aboneka cyane mu birunga no mu misozi ya Rwenzori. 
 
 ==  Notes  == 
 <references/>
