*Empty MediaWiki Message*

--- a/Ukwezi.mw
+++ b/Ukwezi.mw
@@ -10,7 +10,7 @@
 # [[Kanama]] cyangwa ''ukwezi kwa munani''
 # [[Nzeli]] / [[Nzeri]] cyangwa ''ukwezi kwa cyenda''
 # [[Ukwakira]] cyangwa ''ukwezi kwa cumi''
-# [[Ugushingo]] cyangwa ''ukwezi kwa cumi na kumwe''
+# [[Ugushyingo]] cyangwa ''ukwezi kwa cumi na kumwe''
 # [[Ukuboza]] cyangwa ''ukwezi kwa cumi n'abiri''
 
 [[Category:Ukwezi| ]]
