*Empty MediaWiki Message*

--- a/Mutarama.mw
+++ b/Mutarama.mw
@@ -2,7 +2,7 @@
 
 '''Mutarama''' (izina mu Cyongereza ''January'' ; izina mu Gifaransa ''Janvier'' ) cyangwa '''ukwezi kwa mbere'''
 
-[[Category:Ukwezi]]
+[[Category:Mutarama| ]]
 
 [[af:Januarie]]
 [[als:Januar]]
