*Empty MediaWiki Message*

--- a/Gashyantare.mw
+++ b/Gashyantare.mw
@@ -2,7 +2,7 @@
 
 '''Gashyantare''' (izina mu [[Cyongereza]]: ''February'' ; izina mu [[Gifaransa]]: ''Février'' ) cyangwa '''ukwezi kwa kabiri'''
 
-[[Category:Ukwezi]]
+[[Category:Gashyantare]]
 
 [[af:Februarie]]
 [[als:Februar]]
