*Empty MediaWiki Message*

--- a/Werurwe.mw
+++ b/Werurwe.mw
@@ -2,7 +2,7 @@
 
 '''Werurwe''' (izina mu [[Cyongereza]]: ''March'' ; izina mu [[Gifaransa]]: ''Mars'' ) cyangwa '''ukwezi kwa gatatu'''
 
-[[Category:Ukwezi]]
+[[Category:Werurwe| ]]
 
 [[af:Maart]]
 [[ak:Ɔbenem]]
