*Empty MediaWiki Message*

--- a/Mata.mw
+++ b/Mata.mw
@@ -2,7 +2,7 @@
 
 '''Mata''' (izina mu [[Cyongereza]]: ''April'' ; izina mu [[Gifaransa]]: ''Avril'' ) cyangwa '''ukwezi kwa kane'''
 
-[[Category:Ukwezi]]
+[[Category:Mata| ]]
 
 [[af:April]]
 [[als:April]]
