*Empty MediaWiki Message*

--- a/Gicurasi.mw
+++ b/Gicurasi.mw
@@ -2,7 +2,7 @@
 
 '''Gicurasi''' (izina mu [[Cyongereza]]: ''May'' ; izina mu [[Gifaransa]]: ''Mai'' ) cyangwa '''ukwezi kwa gatanu'''
 
-[[Category:Ukwezi]]
+[[Category:Gicurasi| ]]
 
 [[af:Mei]]
 [[als:Mai]]
