*Empty MediaWiki Message*

--- a/Kamena.mw
+++ b/Kamena.mw
@@ -2,7 +2,7 @@
  
 '''Kamena''' (izina mu [[Cyongereza]]: ''June'' ; izina mu [[Gifaransa]]: ''Juin'' ) cyangwa '''ukwezi kwa gatandatu, impeshyi'''
 
-[[Category:Ukwezi]]
+[[Category:Kamena| ]]
 
 [[af:Junie]]
 [[als:Juni]]
