*Empty MediaWiki Message*

--- a/Nyakanga.mw
+++ b/Nyakanga.mw
@@ -2,7 +2,7 @@
   
 '''Nyakanga''' (izina mu [[Cyongereza]]: ''July'' ; izina mu [[Gifaransa]]: ''Juillet'' ) cyangwa '''ukwezi kwa karindwi'''
 
-[[Category:Ukwezi]]
+[[Category:Nyakanga| ]]
 
 [[af:Julie]]
 [[als:Juli]]
