*Empty MediaWiki Message*

--- a/Kanama.mw
+++ b/Kanama.mw
@@ -2,7 +2,7 @@
   
 '''Kanama''' (izina mu [[Cyongereza]]: ''August'' ; izina mu [[Gifaransa]]: ''Août'' ) cyangwa '''ukwezi kwa munani''' , '''ukwezi k’umunani'''
 
-[[Category:Ukwezi]]
+[[Category:Kanama| ]]
 
 [[af:Augustus]]
 [[als:August]]
