*Empty MediaWiki Message*

--- a/Nzeri.mw
+++ b/Nzeri.mw
@@ -2,7 +2,7 @@
   
 '''Nzeri''' cyangwa '''Nzeli''' (izina mu [[Cyongereza]]: ''September'' ; izina mu [[Gifaransa]]: ''Septembre'' ) cyangwa '''ukwezi kwa cyenda''' , '''ukwezi kw’icyenda'''
 
-[[Category:Ukwezi]]
+[[Category:Nzeri| ]]
 
 [[af:September]]
 [[als:September]]
