*Empty MediaWiki Message*

--- a/Ukwezi.mw
+++ b/Ukwezi.mw
@@ -8,7 +8,7 @@
 # [[Kamena]] cyangwa ''ukwezi kwa gatandatu, impeshyi''
 # [[Nyakanga]] cyangwa ''ukwezi kwa karindwi''
 # [[Kanama]] cyangwa ''ukwezi kwa munani''
-# [[Nzeli]] / [[Nzeri]] cyangwa ''ukwezi kwa cyenda''
+# [[Nzeri]] / [[Nzeli]] cyangwa ''ukwezi kwa cyenda''
 # [[Ukwakira]] cyangwa ''ukwezi kwa cumi''
 # [[Ugushyingo]] cyangwa ''ukwezi kwa cumi na kumwe''
 # [[Ukuboza]] cyangwa ''ukwezi kwa cumi n'abiri''
