--- a/Ukwakira.mw
+++ b/Ukwakira.mw
@@ -1,8 +1,8 @@
 [[File:Les Très Riches Heures du duc de Berry octobre.jpg|thumb|250px|<font color="green">ukwezi kwa cumi</font>]]
 
-'''Ukwakira''' (izina mu [[Cyongereza]]: ''October'' ; izina mu [[Gifaransa]]: ''Octobre'' ) cyangwa '''ukwezi kwa cumi''' , '''ukwezi kw’icumi'''
+'''Ukwakira''' (izina mu [[cyongereza]]: ''October'' ; izina mu [[gifaransa]]: ''Octobre'' ) cyangwa '''ukwezi kwa cumi''' , '''ukwezi kw’icumi'''
 
-[[Category:Ukwezi]]
+[[Category:Ukwakira| ]]
 
 [[af:Oktober]]
 [[als:Oktober]]
