*Empty MediaWiki Message*

--- a/Ugushyingo.mw
+++ b/Ugushyingo.mw
@@ -2,7 +2,7 @@
 
 '''Ugushyingo''' (izina mu [[Cyongereza]]: ''November'' ; izina mu [[Gifaransa]]: ''Novembre'' ) cyangwa '''ukwezi kwa cumi na kumwe''' , '''ukwezi kwa cumi na rimwe'''
 
-[[Category:Ukwezi]]
+[[Category:Ugushyingo| ]]
 
 [[af:November]]
 [[als:November]]
