*Empty MediaWiki Message*

--- a/Ukuboza.mw
+++ b/Ukuboza.mw
@@ -2,7 +2,7 @@
 
 '''Ukuboza''' (izina mu [[Cyongereza]]: ''December'' ; izina mu [[Gifaransa]]: ''Décembre'' ) cyangwa '''ukwezi kwa cumi n'abiri''' , '''ukwezi kwa cumi na kabiri'''
 
-[[Category:Ukwezi]]
+[[Category:Ukuboza| ]]
 
 [[af:Desember]]
 [[als:Dezember]]
