--- a/Mutarama.mw
+++ b/Mutarama.mw
@@ -1,6 +1,6 @@
 [[File:Les Très Riches Heures du duc de Berry Janvier.jpg|thumb|250px|<font color="green">ukwezi kwa mbere</font>]]
 
-'''Mutarama''' (izina mu Cyongereza ''January'' ; izina mu Gifaransa ''Janvier'' ) cyangwa '''ukwezi kwa mbere'''
+'''Mutarama''' (izina mu [[cyongereza]] ''January'' ; izina mu [[gifaransa]] ''Janvier'' ) cyangwa '''ukwezi kwa mbere'''
 
 [[Category:Mutarama| ]]
 
