*Empty MediaWiki Message*

--- a/Werurwe.mw
+++ b/Werurwe.mw
@@ -1,6 +1,6 @@
 [[File:Les Très Riches Heures du duc de Berry mars.jpg|thumb|250px|<font color="green">ukwezi kwa gatatu</font>]]
 
-'''Werurwe''' (izina mu [[Cyongereza]]: ''March'' ; izina mu [[Gifaransa]]: ''Mars'' ) cyangwa '''ukwezi kwa gatatu'''
+'''Werurwe''' (izina mu [[cyongereza]]: ''March'' ; izina mu [[gifaransa]]: ''Mars'' ) cyangwa '''ukwezi kwa gatatu'''
 
 [[Category:Werurwe| ]]
 
