*Empty MediaWiki Message*

--- a/Gicurasi.mw
+++ b/Gicurasi.mw
@@ -1,6 +1,6 @@
 [[File:Les Très Riches Heures du duc de Berry mai.jpg|thumb|250px|<font color="green">ukwezi kwa gatanu</font>]]
 
-'''Gicurasi''' (izina mu [[Cyongereza]]: ''May'' ; izina mu [[Gifaransa]]: ''Mai'' ) cyangwa '''ukwezi kwa gatanu'''
+'''Gicurasi''' (izina mu [[cyongereza]]: ''May'' ; izina mu [[gifaransa]]: ''Mai'' ) cyangwa '''ukwezi kwa gatanu'''
 
 [[Category:Gicurasi| ]]
 
