--- a/Nyakanga.mw
+++ b/Nyakanga.mw
@@ -1,6 +1,6 @@
 [[File:Les Très Riches Heures du duc de Berry juillet.jpg|thumb|250px|<font color="green">ukwezi kwa karindwi</font>]]
   
-'''Nyakanga''' (izina mu [[Cyongereza]]: ''July'' ; izina mu [[Gifaransa]]: ''Juillet'' ) cyangwa '''ukwezi kwa karindwi'''
+'''Nyakanga''' (izina mu [[cyongereza]]: ''July'' ; izina mu [[gifaransa]]: ''Juillet'' ) cyangwa '''ukwezi kwa karindwi'''
 
 [[Category:Nyakanga| ]]
 
