*Empty MediaWiki Message*

--- a/Kanama.mw
+++ b/Kanama.mw
@@ -1,6 +1,6 @@
 [[File:Les Très Riches Heures du duc de Berry aout.jpg|thumb|250px|<font color="green">ukwezi kwa munani</font>]]
   
-'''Kanama''' (izina mu [[Cyongereza]]: ''August'' ; izina mu [[Gifaransa]]: ''Août'' ) cyangwa '''ukwezi kwa munani''' , '''ukwezi k’umunani'''
+'''Kanama''' (izina mu [[cyongereza]]: ''August'' ; izina mu [[gifaransa]]: ''Août'' ) cyangwa '''ukwezi kwa munani''' , '''ukwezi k’umunani'''
 
 [[Category:Kanama| ]]
 
