--- a/Nzeri.mw
+++ b/Nzeri.mw
@@ -1,6 +1,6 @@
 [[File:Les Très Riches Heures du duc de Berry septembre.jpg|thumb|250px|<font color="green">ukwezi kwa cyenda</font>]]
   
-'''Nzeri''' cyangwa '''Nzeli''' (izina mu [[Cyongereza]]: ''September'' ; izina mu [[Gifaransa]]: ''Septembre'' ) cyangwa '''ukwezi kwa cyenda''' , '''ukwezi kw’icyenda'''
+'''Nzeri''' cyangwa '''Nzeli''' (izina mu [[cyongereza]]: ''September'' ; izina mu [[gifaransa]]: ''Septembre'' ) cyangwa '''ukwezi kwa cyenda''' , '''ukwezi kw’icyenda'''
 
 [[Category:Nzeri| ]]
 
