*Empty MediaWiki Message*

--- a/Ugushyingo.mw
+++ b/Ugushyingo.mw
@@ -1,6 +1,6 @@
 [[File:Les Très Riches Heures du duc de Berry novembre.jpg|thumb|250px|<font color="green">ukwezi kwa cumi na kumwe</font>]]
 
-'''Ugushyingo''' (izina mu [[Cyongereza]]: ''November'' ; izina mu [[Gifaransa]]: ''Novembre'' ) cyangwa '''ukwezi kwa cumi na kumwe''' , '''ukwezi kwa cumi na rimwe'''
+'''Ugushyingo''' (izina mu [[cyongereza]]: ''November'' ; izina mu [[gifaransa]]: ''Novembre'' ) cyangwa '''ukwezi kwa cumi na kumwe''' , '''ukwezi kwa cumi na rimwe'''
 
 [[Category:Ugushyingo| ]]
 
