--- a/Ukuboza.mw
+++ b/Ukuboza.mw
@@ -1,6 +1,6 @@
 [[File:Les Très Riches Heures du duc de Berry décembre.jpg|thumb|250px|<font color="green">ukwezi kwa cumi n'abiri</font>]]
 
-'''Ukuboza''' (izina mu [[Cyongereza]]: ''December'' ; izina mu [[Gifaransa]]: ''Décembre'' ) cyangwa '''ukwezi kwa cumi n'abiri''' , '''ukwezi kwa cumi na kabiri'''
+'''Ukuboza''' (izina mu [[cyongereza]]: ''December'' ; izina mu [[gifaransa]]: ''Décembre'' ) cyangwa '''ukwezi kwa cumi n'abiri''' , '''ukwezi kwa cumi na kabiri'''
 
 [[Category:Ukuboza| ]]
 
