*Empty MediaWiki Message*

--- a/Ukwezi.mw
+++ b/Ukwezi.mw
@@ -13,7 +13,7 @@
 # [[Ugushyingo]] cyangwa ''ukwezi kwa cumi na kumwe''
 # [[Ukuboza]] cyangwa ''ukwezi kwa cumi n'abiri''
 
-[[Category:Ukwezi| ]]
+[[Category:Amezi| ]]
 
 [[af:Maand]]
 [[als:Monat]]
