*Empty MediaWiki Message*

--- a/1988.mw
+++ b/1988.mw
@@ -24,3 +24,152 @@
 *[[07 Ukuboza]] &ndash; Umutingito washegeshe [[Arumeniya]] uhitana abantu 50.000
 
 [[Category:1988|1988]]
+
+[[af:1988]]
+[[am:1988 እ.ኤ.አ.]]
+[[ar:ملحق:1988]]
+[[an:1988]]
+[[roa-rup:1988]]
+[[frp:1988]]
+[[ast:1988]]
+[[gn:1988]]
+[[av:1988]]
+[[ay:1988]]
+[[az:1988]]
+[[bn:১৯৮৮]]
+[[zh-min-nan:1988 nî]]
+[[map-bms:1988]]
+[[be:1988]]
+[[be-x-old:1988]]
+[[bh:१९८८]]
+[[bcl:1988]]
+[[bs:1988]]
+[[br:1988]]
+[[bg:1988]]
+[[ca:1988]]
+[[cv:1988]]
+[[cs:1988]]
+[[cbk-zam:1988]]
+[[co:1988]]
+[[cy:1988]]
+[[da:1988]]
+[[pdc:1988]]
+[[de:1988]]
+[[et:1988]]
+[[el:1988]]
+[[myv:1988 ие]]
+[[es:1988]]
+[[eo:1988]]
+[[eu:1988]]
+[[fa:۱۹۸۸ (میلادی)]]
+[[hif:1988]]
+[[fo:1988]]
+[[fr:1988]]
+[[fy:1988]]
+[[ga:1988]]
+[[gv:1988]]
+[[gd:1988]]
+[[gl:1988]]
+[[gan:1988年]]
+[[xal:1988 җил]]
+[[ko:1988년]]
+[[hy:1988]]
+[[hi:१९८८]]
+[[hr:1988.]]
+[[io:1988]]
+[[ilo:1988]]
+[[bpy:মারি ১৯৮৮]]
+[[id:1988]]
+[[ia:1988]]
+[[os:1988-æм аз]]
+[[is:1988]]
+[[it:1988]]
+[[he:1988]]
+[[jv:1988]]
+[[kn:೧೯೮೮]]
+[[pam:1988]]
+[[krc:1988 джыл]]
+[[ka:1988]]
+[[csb:1988]]
+[[kk:1988]]
+[[kw:1988]]
+[[sw:1988]]
+[[kv:1988 во]]
+[[ht:1988 (almanak gregoryen)]]
+[[ku:1988]]
+[[la:1988]]
+[[lv:1988. gads]]
+[[lb:1988]]
+[[lt:1988 m.]]
+[[lij:1988]]
+[[li:1988]]
+[[ln:1988]]
+[[jbo:1988moi]]
+[[lmo:1988]]
+[[hu:1988]]
+[[mk:1988]]
+[[ml:1988]]
+[[mi:1988]]
+[[mr:इ.स. १९८८]]
+[[arz:1988]]
+[[ms:1988]]
+[[nah:1988]]
+[[nl:1988]]
+[[nds-nl:1988]]
+[[ja:1988年]]
+[[nap:1988]]
+[[no:1988]]
+[[nn:1988]]
+[[nrm:1988]]
+[[nov:1988]]
+[[oc:1988]]
+[[mhr:1988]]
+[[uz:1988]]
+[[pa:੧੯੮੮]]
+[[pi:१९८८]]
+[[pnb:1988]]
+[[nds:1988]]
+[[pl:1988]]
+[[pt:1988]]
+[[ty:1988]]
+[[ksh:Joohr 1988]]
+[[ro:1988]]
+[[qu:1988]]
+[[ru:1988 год]]
+[[sah:1988]]
+[[se:1988]]
+[[stq:1988]]
+[[sq:1988]]
+[[scn:1988]]
+[[simple:1988]]
+[[sk:1988]]
+[[sl:1988]]
+[[so:1988]]
+[[ckb:١٩٨٨]]
+[[sr:1988]]
+[[sh:1988]]
+[[su:1988]]
+[[fi:1988]]
+[[sv:1988]]
+[[tl:1988]]
+[[ta:1988]]
+[[tt:1988]]
+[[te:1988]]
+[[th:พ.ศ. 2531]]
+[[tr:1988]]
+[[tk:1988]]
+[[udm:1988 ар]]
+[[uk:1988]]
+[[ur:1988ء]]
+[[vec:1988]]
+[[vi:1988]]
+[[vo:1988]]
+[[wa:1988]]
+[[zh-classical:一九八八年]]
+[[vls:1988]]
+[[war:1988]]
+[[yi:1988]]
+[[yo:1988]]
+[[zh-yue:1988年]]
+[[bat-smg:1988]]
+[[zh:1988年]]
