*Empty MediaWiki Message*

--- a/07_Ukuboza.mw
+++ b/07_Ukuboza.mw
@@ -1,5 +1,4 @@
-
-*[[1988]] &ndash; Umutingito washegeshe [[Arumeniya]] uhitana abantu 50.000
+*[[1988]] &ndash; [[Umutingito]] washegeshe [[Arumeniya]] uhitana abantu 50.000
 
 [[Category:Ukuboza]]
 
