--- a/1988.mw
+++ b/1988.mw
@@ -21,7 +21,7 @@
 == Ugushyingo == 
 
 == Ukuboza == 
-*[[07 Ukuboza]] &ndash; Umutingito washegeshe [[Arumeniya]] uhitana abantu 50.000
+*[[07 Ukuboza]] &ndash; [[Umutingito]] washegeshe [[Arumeniya]] uhitana abantu 50.000
 
 [[Category:1988|1988]]
 
