--- a/Abavuzi_Batagira_Umupaka.mw
+++ b/Abavuzi_Batagira_Umupaka.mw
@@ -1,6 +1,6 @@
 [[File:Msf logo.png|thumb|250px|<font color="green">Abavuzi Batagira Umupaka</font>]]
 
-'''Abavuzi Batagira Umupaka''' (MSF ; (izina mu [[gifaransa]]:  ''Médecins Sans Frontières'') ni ikigo cyita ku buvuzibw abantu bari mu kaga. Gishyira imbere uburenganzira bwa muntu n’ubuzima bwe mbere y’ubundi burenganzira ubwo ari bwo bwose.
+'''Abavuzi Batagira Umupaka''' (MSF ; izina mu [[gifaransa]]:  ''Médecins Sans Frontières'') ni ikigo cyita ku buvuzibw abantu bari mu kaga. Gishyira imbere uburenganzira bwa muntu n’ubuzima bwe mbere y’ubundi burenganzira ubwo ari bwo bwose.
 
 [[Category:Imiryango]]
 
