*Empty MediaWiki Message*

--- a/World_Social_Forum.mw
+++ b/World_Social_Forum.mw
@@ -1,6 +1,6 @@
 [[File:Noam Chomsky WSF - 2003.jpg|thumb|250px|<font color="green"></font>]]
 
-'''''World Social Forum''''' ni Forumu itegamiye kuri Leta ihuza za NGOs ikaba iharanira ubwisanzure bw abaturage n amahuriro yabo ashyiraho umurongo wa politiki ubabereye kandi ugamije iterambere rirambye kandi ryuzuzanya. Muri rusange iyi forum irwanya Ikomatanyabukungu , ubusumbane bukabije mu by ubukungu n izindi ngeso za mpatsibihugu, igashyira imbere uburenganzira bwa muntu no kurengera ibidukikije. Irwanya kwegurira ibikorwa abikorera ku giti cyabo, ubwisanzure mu bucuruzi n amategeko arengera umutungo, ivuga ko ubutegetsi bwava ku rwego rw isi bukajya ku rwego rw igihugu.
+'''''World Social Forum''''' ni Forumu itegamiye kuri Leta ihuza za [[NGO]]s ikaba iharanira ubwisanzure bw abaturage n amahuriro yabo ashyiraho umurongo wa politiki ubabereye kandi ugamije iterambere rirambye kandi ryuzuzanya. Muri rusange iyi forum irwanya Ikomatanyabukungu , ubusumbane bukabije mu by ubukungu n izindi ngeso za mpatsibihugu, igashyira imbere uburenganzira bwa muntu no kurengera ibidukikije. Irwanya kwegurira ibikorwa abikorera ku giti cyabo, ubwisanzure mu bucuruzi n amategeko arengera umutungo, ivuga ko ubutegetsi bwava ku rwego rw isi bukajya ku rwego rw igihugu.
 
 [[Category:Imiryango]]
 
