*Empty MediaWiki Message*

--- a/Samuel_Morse.mw
+++ b/Samuel_Morse.mw
@@ -5,3 +5,60 @@
 
 [[Category:Abanyamerika]] 
 [[Category:Abagabo]]
+
+[[af:Samuel Morse]]
+[[ar:صمويل مورس]]
+[[az:Samuel Morze]]
+[[be:Самуэль Морзэ]]
+[[be-x-old:Сэм’юэл Морзэ]]
+[[bs:Samuel Finley Breese Morse]]
+[[bg:Самюъл Морз]]
+[[ca:Samuel Morse]]
+[[cs:Samuel F. B. Morse]]
+[[da:Samuel Morse]]
+[[de:Samuel F. B. Morse]]
+[[et:Samuel Morse]]
+[[el:Σάμιουελ Μορς]]
+[[es:Samuel Morse]]
+[[eo:Samuel Morse]]
+[[fa:ساموئل مورس]]
+[[fr:Samuel Morse]]
+[[fy:Samuel Morse]]
+[[gl:Samuel Morse]]
+[[gu:સેમ્યુઅલ મોર્સ]]
+[[ko:새뮤얼 모스]]
+[[hy:Սեմյուել Մորզե]]
+[[hi:सेम्युल एफ.बी. मोर्स]]
+[[hr:Samuel Finley Breese Morse]]
+[[id:Samuel Morse]]
+[[os:Морзе, Сэмюэл]]
+[[it:Samuel Finley Breese Morse]]
+[[he:סמואל מורס]]
+[[jv:Samuel Morse]]
+[[ka:სემიუელ მორზე]]
+[[hu:Samuel Finley Breese Morse]]
+[[mk:Семјуел Морзе]]
+[[mr:सॅम्युएल मॉर्स]]
+[[ms:Samuel Morse]]
+[[mn:Сэмюэл Морзе]]
+[[nl:Samuel Morse]]
+[[ja:サミュエル・モールス]]
+[[no:Samuel F. B. Morse]]
+[[nn:Samuel Morse]]
+[[pl:Samuel Finley Breese Morse]]
+[[pt:Samuel Morse]]
+[[ro:Samuel Morse]]
+[[ru:Морзе, Сэмюэл]]
+[[sq:Samuel Morse]]
+[[sk:Samuel Finley Breese Morse]]
+[[sl:Samuel Finley Breese Morse]]
+[[sr:Семјуел Морзе]]
+[[fi:Samuel Morse]]
+[[sv:Samuel Morse]]
+[[ta:சாமுவெல் எஃப். பி. மோர்ஸ்]]
+[[te:సామ్యూల్ F. B. మోర్స్]]
+[[th:ซามูเอล เอฟ. บี. มอร์ส]]
+[[tr:Samuel Morse]]
+[[uk:Семюел Фінлі Бріз Морзе]]
+[[vi:Samuel Morse]]
+[[zh:萨缪尔·摩尔斯]]
