--- a/27_Mata.mw
+++ b/27_Mata.mw
@@ -2,6 +2,7 @@
 
 == Ibihangange byavutse kuri iyi tariki  == 
 *[[1791]] &ndash; havutse [[Samuel Morse]]
+*[[1822]] &ndash; havutse [[Ulysses S. Grant]]
 
 == Ibihangange byatabarutse kuri iyi tariki == 
 
