--- a/27_Mata.mw
+++ b/27_Mata.mw
@@ -2,7 +2,7 @@
 
 == Ibihangange byavutse kuri iyi tariki  == 
 *[[1791]] &ndash; havutse [[Samuel Morse]]
-*[[1822]] &ndash; havutse [[Ulysses S. Grant]]
+*[[1822]] &ndash; havutse [[Ulysses Simpson Grant]]
 
 == Ibihangange byatabarutse kuri iyi tariki == 
 
