*Empty MediaWiki Message*

--- a/James_Madison.mw
+++ b/James_Madison.mw
@@ -1,6 +1,6 @@
 [[File:James Madison.jpg|thumb|250px|<font color="green">James Madison</font>]]
 
-'''James Madison''' ([[16 Werurwe]] [[1751]] &ndash; [[28 Kamena]] [[1836]]), [[Perezida]] wa 4 wa [[Leta Zunze Ubumwe z’Amerika]].
+'''James Madison''' ([[16 Werurwe]] [[1751]] &ndash; [[28 Kamena]] [[1836]]), [[Perezida]] wa [[Abaperezida ba Leta Zunze Ubumwe z’Amerika|4]] wa [[Leta Zunze Ubumwe z’Amerika]].
 
 [[Category:Abaperezida ba Leta Zunze Ubumwe z’Amerika]]
 [[Category:Abaperezida]] 
