*Empty MediaWiki Message*

--- a/John_Quincy_Adams.mw
+++ b/John_Quincy_Adams.mw
@@ -1,6 +1,6 @@
 [[File:John Quincy Adams in 1843.png|thumb|250px|<font color="green">John Quincy Adams</font>]]
 
-'''John Quincy Adams''' ([[11 Nyakanga]] [[1767]] &ndash; [[23 Gashyantare]] [[1848]]), [[Perezida]] wa 6 wa [[Leta Zunze Ubumwe z’Amerika]].
+'''John Quincy Adams''' ([[11 Nyakanga]] [[1767]] &ndash; [[23 Gashyantare]] [[1848]]), [[Perezida]] wa [[Abaperezida ba Leta Zunze Ubumwe z’Amerika|6]] wa [[Leta Zunze Ubumwe z’Amerika]].
 
 [[Category:Abaperezida ba Leta Zunze Ubumwe z’Amerika]]
 [[Category:Abaperezida]] 
