--- a/Andrew_Jackson.mw
+++ b/Andrew_Jackson.mw
@@ -1,6 +1,6 @@
 [[File:Andrew jackson head.gif|thumb|250px|<font color="green">Andrew Jackson</font>]]
 
-'''Andrew Jackson''' ([[15 Werurwe]] [[1767]] &ndash; [[8 Kamena]] [[1845]]), [[Perezida]] wa 7 wa [[Leta Zunze Ubumwe z’Amerika]].
+'''Andrew Jackson''' ([[15 Werurwe]] [[1767]] &ndash; [[8 Kamena]] [[1845]]), [[Perezida]] wa [[Abaperezida ba Leta Zunze Ubumwe z’Amerika|7]] wa [[Leta Zunze Ubumwe z’Amerika]].
 
 [[Category:Abaperezida ba Leta Zunze Ubumwe z’Amerika]]
 [[Category:Abaperezida]] 
