*Empty MediaWiki Message*

--- a/John_Adams.mw
+++ b/John_Adams.mw
@@ -1,4 +1,4 @@
-[[File:US Navy 031029-N-6236G-001 A painting of President John Adams (1735-1826), 2nd president of the United States, by Asher B. Durand (1767-1845)-crop.jpg|thumb|250px|<font color="green">John Adams</font>]]
+[[File:US Navy 031029-N-6236G-001 A painting of President John Adams (1735-1826), 2nd president of the United States, by Asher B. Durand (1767-1845)-crop.jpg|thumb|250px|<font color="grey">John Adams</font>]]
 
 '''John Adams''' ([[30 Ukwakira]] [[1735]] &ndash; [[4 Nyakanga]] [[1826]]), [[Perezida]] wa [[Abaperezida ba Leta Zunze Ubumwe z’Amerika|2]] wa [[Leta Zunze Ubumwe z’Amerika]].
 
