--- a/Thomas_Jefferson.mw
+++ b/Thomas_Jefferson.mw
@@ -1,4 +1,4 @@
-[[File:Thomas Jefferson by Rembrandt Peale, 1800.jpg|thumb|250px|<font color="green">Thomas Jefferson</font>]]
+[[File:Thomas Jefferson by Rembrandt Peale, 1800.jpg|thumb|250px|<font color="grey">Thomas Jefferson</font>]]
 
 '''Thomas Jefferson''' ([[13 Mata]] [[1743]] &ndash; [[4 Nyakanga]] [[1826]]), [[Perezida]] wa [[Abaperezida ba Leta Zunze Ubumwe z’Amerika|3]] wa [[Leta Zunze Ubumwe z’Amerika]].
 
