*Empty MediaWiki Message*

--- a/James_Monroe.mw
+++ b/James_Monroe.mw
@@ -1,4 +1,4 @@
-[[File:Jm5.gif|thumb|250px|<font color="green">James Monroe</font>]]
+[[File:Jm5.gif|thumb|250px|<font color="grey">James Monroe</font>]]
 
 '''James Monroe''' ([[28 Mata]] [[1758]] &ndash; [[4 Nyakanga]] [[1831]]), [[Perezida]] wa [[Abaperezida ba Leta Zunze Ubumwe z’Amerika|5]] wa [[Leta Zunze Ubumwe z’Amerika]].
 
