*Empty MediaWiki Message*

--- a/Rwanda.mw
+++ b/Rwanda.mw
@@ -1,17 +1,17 @@
-[[File:Flag of Rwanda.svg|thumb|250px|<font color="green"></font>]]
-[[File:Coat of arms of Rwanda.svg|thumb|250px|<font color="green"></font>]]
-[[File:LocationRwanda.svg|thumb|250px|<font color="green"></font>]]
+[[File:Flag of Rwanda.svg|thumb|250px|<font color="grey"></font>]]
+[[File:Coat of arms of Rwanda.svg|thumb|250px|<font color="grey"></font>]]
+[[File:LocationRwanda.svg|thumb|250px|<font color="grey"></font>]]
 
 '''Rwanda''' cyangwa '''Repubulika y'u Rwanda'''
 
 
-U [[Rwanda]] ni igihugu giherereye muri [[Afurika]] yo hagati mu karere k'ibiyaga bigari, munsi y'Umurongo wa [[Koma y'isi]]. Umurwa mukuru w'u Rwanda witwa [[Kigali]]. Ni gihugu kiza cyane cy'imisozi igihumbi, kikaba gikoresha indimi eshatu: I[[kinyarwanda]], I[[gifaransa]], I[[cyongereza]].
+U [[Rwanda]] ni [[igihugu]] giherereye muri [[Afurika]] yo hagati mu karere k'ibiyaga bigari, munsi y'Umurongo wa [[Koma y'isi]]. Umurwa mukuru w'u Rwanda witwa [[Kigali]]. Ni gihugu kiza cyane cy'imisozi igihumbi, kikaba gikoresha indimi eshatu: I[[kinyarwanda]], I[[gifaransa]], I[[cyongereza]].
 
 == "Geography" ==
 
 N’igihugu kidakora kunyanja, kiri muri Afurika yo hagati karere bita ak’ibiyaga bigari. U Rwanda rufite ibirunga bitanu, ibiyaga makumyabiri na bitatu n’imigezi myinshi, imwe akaba ariyo soko y’uruzi rwa [[Nil]]. U Rwanda rufite ubuso bwa 26,338 km² ubutaka bukaba bwihariye 24,948 km² amazi agafata 1,390 km². Abaturage babarirwa hafi ya 7,954,013 , ubwo rero n’abantu 281kuri buri km², u Rwanda rubarirwa mu bihubu bituwe cyane kurusha ibindi muri Afurika.
 
-[[File:Rwanda Gitarama landscape.JPG|thumb|left|250px|<font color="green"></font>]]
+[[File:Rwanda Gitarama landscape.JPG|thumb|left|250px|<font color="grey"></font>]]
 
 Imipaka n’ibihugu by’ibituranyi bikurikira ni 893 km: [[Burundi]] mu majyepfo (290km), [[Tanzania]] mu burasirazuba (217km), [[Uganda]] mu majyaruguru(169km) na [[Repubulika iharanira Demokarasi ya Kongo]] (217km). U Rwanda rufite ibihe by’imvura bibiri-Gashyantare kugera muri Gicurasi no kuva muri Nzeli kugera muri Mutarama. Mu misozi ibihe biri mi rugero hajya haba ubutita rimwe na rimwe hakaza n’urubura rw’imbonekarimwe.
 
@@ -28,7 +28,7 @@ Ariko ibi byarahindutse kuva ku itariki ya [[1 Mutarama]] [[2006]]. Muri porogar
 
 Amazina, umubare n’ibyicaro by’Intara n’iby’Umujyi wa Kigali bigaragara mu mbonerahamwe ikurikira:
 
-[[File:RwandaGeoProvinces.png|thumb|200px|<font color="green">Intara n’Uturere</font>]]
+[[File:RwandaGeoProvinces.png|thumb|200px|<font color="grey">Intara n’Uturere</font>]]
 
 {| border="0" cellpadding="5" cellspacing="5" 
 |- bgcolor="#aaaaaa"
@@ -69,7 +69,7 @@ Amazina, umubare n’ibyicaro by’Intara n’iby’Umujyi wa Kigali bigaragara 
 |}
 
 == [[Abanyarwanda]] ==
-[[File:Rwandan children at Volcans National Park.jpg|thumb|200px|<font color="green">''Volcans National Park''</font>]]
+[[File:Rwandan children at Volcans National Park.jpg|thumb|200px|<font color="grey">''Volcans National Park''</font>]]
 
 Hari batatu mu Rwanda. Hari [[Abatwa]], [[Abahutu]] n’[[Abatutsi]].<ref>[http://www.kituochakatiba.org/index2.php?option=com_docman&task=doc_view&gid=1199&Itemid=36 Ugushakisha Ukuri n’Ubumuntu, Kituo Cha Katiba, Nyakanga, 2004 – Gashyantare, 2006] </ref>
 
@@ -81,7 +81,7 @@ mu gihagararo bakaba banabarwa mu bantu batuye bwa mbere mu karere k’ibiyaga b
 '''[[Abatutsi]]''' bivugwa ko aribo baje nyuma mu karere k’ibiyaga bigari. N’aborozi b’inka bakaba ari 14% b’abatuye u Rwanda n’uburundi. Bagaragaraga nk’imfura bakaba banashoboye gutegeka akarere igihe kirekire bakanakundwa n’abadage n’ababiligi (abacoloni).
 
 == [[Iyobokamana]] ==
-[[File:RwamaganaChurch.jpg |thumb|left|100px|<font color="green"></font>]]
+[[File:RwamaganaChurch.jpg |thumb|left|100px|<font color="grey"></font>]]
 
 [[Abanyarwanda]] benshi ni abayoboke b’amadini 2 akomeye ariyo [[Ubukristu]] ([[Abaagatolika]], [[Abaporoso]], [[Abapresibuteliyani]] n’[[abangilikani]]) n’[[ubuyislamu]]. 
 
