/* Amashyaka ya Politiki */

--- a/Rwanda.mw
+++ b/Rwanda.mw
@@ -98,7 +98,7 @@ Ubukungu bw’u Rwanda bugizwe ahanini n’ubuhinzi abenshi mu bahinzi batunzwe 
 Muri [[Politiki]], u Rwanda rwayoborwaga n’Umuryango w’Abibumbye mbere yuko rukolonizwa n’Ababirigi kugeza rubonye ubwigenge ku itariki ya 1 Nyakanga 1962. Ni repubulika iyoborwa na perezida ikaba ikanagendera kuri demokarasi y’amashyaka menshi. Itegekonshinga rishya ryemejwe ku itariki ya [[26 Gicurasi]] [[2003]]. Umukuru w’igihugu ni Nyakubahwa Perezida [[Paul Kagame]] naho Umukuru wa guverinoma Ni Minisitiri w’intebe [[Bernard Makuza]] Guverinoma ishyirwaho na Perezida. Nkuko Komisiyo y’amatora y’u Rwanda ibivuga, mu matora rusange yabaye ku italiki ya [[25 Kanama]] [[2003]], abatsinze ni aba: Paul Kagame 95%, [[Faustin Twagiramungu]] 3.62% na [[Jean Népomuscène]] 1.33%. Abitabiriye amatora ni 96.55%.
 
 == Amashyaka ya Politiki ==
-[[File:Kagame.jpg|thumb|250px|<font color="green">Paul Kagame</font>]]
+[[File:Kagame.jpg|thumb|250px|<font color="grey">Paul Kagame</font>]]
 
 U Rwanda ni igihugu kigendera kuri [[demokarasi]] y’amashyaka menshi. Ariko ishyaka rimwe niryo rifite ingufu zigaragara mu buzima bwa politiki- Ishyaka rya FPR Inkotanyi. Muri iki gihe, amashyaka ya politiki atavuga rumwe na leta ntacyo avuze cyane ko nta mahirwe na make yo kugira uruhare mu guhindura politike y’igihugu.
 
