--- a/Barack_Obama.mw
+++ b/Barack_Obama.mw
@@ -1,6 +1,6 @@
 [[File:Official portrait of Barack Obama.jpg|thumb|250px|<font color="grey">Barack Obama</font>]]
 
-'''Barack Obama''' cyangwa '''Barack Hussein Obama''' ([[4 Kanama]] [[1961]]), [[Perezida]] wa [[Abaperezida ba Leta Zunze Ubumwe z’Amerika|44]] wa [[Leta Zunze Ubumwe z’Amerika]].
+'''Barack Obama''' cyangwa '''Barack Hussein Obama''' ([[4 Kanama]] [[1961]] &ndash; ), [[Perezida]] wa [[Abaperezida ba Leta Zunze Ubumwe z’Amerika|44]] wa [[Leta Zunze Ubumwe z’Amerika]].
 
 Barack Obama ukomoka ku mubyeyi w’umunya [[Kenya]] n’uw’umunyamerika yakuriye muri [[Hawai]] ndetse no muri [[Indoneziya]], yabaye umukorarabushake muri [[Chicago]], uwunganira abandi mu manza, akaba yaraje kuba senateur wa [[Illinois]], Barack Obama yabaye ku mugarago perezida wa leta zunze ubumwe z’America ku italiki ya [[20 Mutarama]] [[2009]]. Uru ni urugendo rwe kuva muri senat ya leta ye ya Illinois kugera abaye perezida wa leta zunze ubumwe z’Amerika.
 
