--- a/Ulysses_Simpson_Grant.mw
+++ b/Ulysses_Simpson_Grant.mw
@@ -1,6 +1,6 @@
 [[File:Ulysses Grant 1870-1880.jpg|thumb|250px|<font color="green">Ulysses Simpson Grant</font>]]
 
-'''Ulysses Simpson Grant''' cyangwa '''Ulysses S. Grant''' ([[27 Mata]] [[1822]] – [[23 Nyakanga]] [[1885]]), [[Perezida]] wa 18 wa [[Leta Zunze Ubumwe z’Amerika]].
+'''Ulysses Simpson Grant''' cyangwa '''Ulysses S. Grant''' ([[27 Mata]] [[1822]] – [[23 Nyakanga]] [[1885]]), [[Perezida]] wa [[Abaperezida ba Leta Zunze Ubumwe z’Amerika|18]] wa [[Leta Zunze Ubumwe z’Amerika]].
 
 [[Category:Abaperezida ba Leta Zunze Ubumwe z’Amerika]]
 [[Category:Abaperezida]]
