--- a/1791.mw
+++ b/1791.mw
@@ -5,7 +5,7 @@
 == Werurwe ==
 
 == Mata ==
-* [[27 Mata]] – havutse [[Samuel Morse]]
+* [[27 Mata]] &ndash; havutse [[Samuel Morse]]
 
 == Gicurasi ==
 
