--- a/1791.mw
+++ b/1791.mw
@@ -5,6 +5,7 @@
 == Werurwe ==
 
 == Mata ==
+* [[23 Mata]] &ndash; havutse [[James Buchanan]]
 * [[27 Mata]] &ndash; havutse [[Samuel Morse]]
 
 == Gicurasi ==
