*Empty MediaWiki Message*

--- a/27_Mata.mw
+++ b/27_Mata.mw
@@ -1,8 +1,8 @@
 '''27 Mata'''
 
 == Ibihangange byavutse kuri iyi tariki ==
-* [[1791]] – havutse [[Samuel Morse]]
-* [[1822]] – havutse [[Ulysses Simpson Grant]]
+* [[1791]] &ndash; havutse [[Samuel Morse]]
+* [[1822]] &ndash; havutse [[Ulysses Simpson Grant]]
 
 == Ibihangange byatabarutse kuri iyi tariki ==
 
