*Empty MediaWiki Message*

--- a/Leta_Zunze_Ubumwe_z’Amerika.mw
+++ b/Leta_Zunze_Ubumwe_z’Amerika.mw
@@ -1,5 +1,5 @@
-[[File:Flag of the United States.svg|thumb|250px|<font color="green">Ibendera rya Leta Zunze Ubumwe z’Amerika</font>]]
-[[File:United States (orthographic projection).svg|thumb|250px|<font color="green">Ikarita ya Leta Zunze Ubumwe z’Amerika</font>]]
+[[File:Flag of the United States.svg|thumb|250px|<font color="grey">Ibendera rya Leta Zunze Ubumwe z’Amerika</font>]]
+[[File:United States (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita ya Leta Zunze Ubumwe z’Amerika</font>]]
 
 '''Leta Zunze Ubumwe z’Amerika''' cyangwa '''Reta Zunze Ubumwe z’Amerika''' mu mvugo ya rubanda bakunze kuvuga '''Amerika''' (izina mu [[cyongereza]]: ''America'') cyangwa '''Leta Zunze Ubumwe''' (izina mu [[cyongereza]]: ''United States'').
 
