*Empty MediaWiki Message*

--- a/Grover_Cleveland.mw
+++ b/Grover_Cleveland.mw
@@ -1,6 +1,6 @@
 [[File:President Grover Cleveland Restored.jpg|thumb|250px|<font color="grey">Grover Cleveland</font>]]
 
-'''Stephen Grover Cleveland ''' ([[18 Werurwe]] [[1837]] &ndash; [[24 Kamena]] [[1908]]), [[Perezida]] wa [[Abaperezida ba Leta Zunze Ubumwe z’Amerika|22]] wa [[Leta Zunze Ubumwe z’Amerika]].
+'''Stephen Grover Cleveland ''' ([[18 Werurwe]] [[1837]] &ndash; [[24 Kamena]] [[1908]]), [[Perezida]] wa [[Abaperezida ba Leta Zunze Ubumwe z’Amerika|22]] na 24 wa [[Leta Zunze Ubumwe z’Amerika]].
 
 [[Category:Abaperezida ba Leta Zunze Ubumwe z’Amerika]]
 [[Category:Abaperezida]] 
