*Empty MediaWiki Message*

--- a/Theodore_Roosevelt.mw
+++ b/Theodore_Roosevelt.mw
@@ -1,6 +1,6 @@
 [[File:Theodore Roosevelt circa 1902.jpg|thumb|250px|<font color="grey">Theodore Roosevelt</font>]]
 
-'''Theodore Roosevelt''' ('''Teddy''' mu magambo ahinnye y’[[icyongereza]]) ([[27 Kanama]] [[1858]] &ndash; [[6 Mutarama]] [[1919]]), [[Perezida]] wa [[Abaperezida ba Leta Zunze Ubumwe z’Amerika|26]] wa [[Leta Zunze Ubumwe z’Amerika]].
+'''Theodore Roosevelt''' cyangwa '''Teddy''' mu magambo ahinnye y’[[icyongereza]] ([[27 Kanama]] [[1858]] &ndash; [[6 Mutarama]] [[1919]]), [[Perezida]] wa [[Abaperezida ba Leta Zunze Ubumwe z’Amerika|26]] wa [[Leta Zunze Ubumwe z’Amerika]].
 
 [[Category:Abaperezida ba Leta Zunze Ubumwe z’Amerika]]
 [[Category:Abaperezida]] 
