*Empty MediaWiki Message*

--- a/Abaperezida_ba_Turukiya.mw
+++ b/Abaperezida_ba_Turukiya.mw
@@ -1,6 +1,12 @@
 [[File:Türkiye Cumhuriyeti Cumhurbaşkanlığı forsu.svg|thumb|100px|<font color="grey"></font>]]
 '''Abaperezida ba [[Turukiya]]'''
 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 {| class="wikitable"
 |--
 ! # 
@@ -35,3 +41,32 @@
 |}
 
 [[Category:Abaperezida ba Turukiya]]
+
+[[ar:قائمة رؤساء تركيا]]
+[[br:Roll Prezidanted Turkia]]
+[[ca:President de Turquia]]
+[[da:Tyrkiets præsidenter]]
+[[de:Liste der Präsidenten der Türkei]]
+[[en:List of Presidents of Turkey]]
+[[es:Anexo:Presidente de Turquía]]
+[[fa:فهرست روسای جمهور ترکیه]]
+[[fr:Liste des présidents de la République turque]]
+[[hu:Törökország köztársasági elnökeinek listája]]
+[[id:Daftar Presiden Turki]]
+[[io:Listo di prezidisti di Turkia]]
+[[it:Presidenti della Turchia]]
+[[ja:トルコの大統領]]
+[[jv:Daftar Présidhèn Turki]]
+[[ka:თურქეთის პრეზიდენტი]]
+[[ko:터키의 대통령]]
+[[lv:Turcijas prezidenti]]
+[[ms:Senarai Presiden Turki]]
+[[nl:Lijst van presidenten van Turkije]]
+[[oc:Lista dels presidents de Turquia]]
+[[pl:Prezydenci Turcji]]
+[[pt:Anexo:Lista de presidentes da Turquia]]
+[[ru:Президент Турции]]
+[[simple:President of Turkey]]
+[[sv:Lista över Turkiets presidenter]]
+[[tr:Türkiye cumhurbaşkanları listesi]]
+[[zh:土耳其总统列表]]
