*Empty MediaWiki Message*

--- a/Abaperezida_ba_Turukiya.mw
+++ b/Abaperezida_ba_Turukiya.mw
@@ -40,7 +40,7 @@
 |--
 |}
 
-[[Category:Abaperezida ba Turukiya]]
+[[Category:Abaperezida ba Turukiya| ]]
 
 [[ar:قائمة رؤساء تركيا]]
 [[br:Roll Prezidanted Turkia]]
