--- a/Mustafa_Kemal_Atatürk.mw
+++ b/Mustafa_Kemal_Atatürk.mw
@@ -1,4 +1,4 @@
-[[File:MustafaKemalAtaturk.jpg|thumb|250px|<font color="grey">Mustafa Kemal Atatürk</font>]]
+[[File:General Mustafa Kemal.jpg|thumb|250px|<font color="grey">Mustafa Kemal Atatürk</font>]]
 
 '''Mustafa Kemal Atatürk''' ([[1881]] &ndash; [[10 Ugushyingo]] [[1938]]), [[Perezida]] wa [[Abaperezida ba Turukiya|1]] wa Repubulika ya [[Turukiya]].
 
