/* Ibihangange byavutse kuri iyi tariki */

--- a/27_Mata.mw
+++ b/27_Mata.mw
@@ -3,6 +3,7 @@
 == Ibihangange byavutse kuri iyi tariki ==
 * [[1791]] &ndash; havutse [[Samuel Morse]]
 * [[1822]] &ndash; havutse [[Ulysses Simpson Grant]]
+* [[1939]] &ndash; havutse [[João Bernardo Vieira]]
 
 == Ibihangange byatabarutse kuri iyi tariki ==
 
