--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -111,7 +111,7 @@
 * '''RARDA''' [[Ikigo gishinzwe guteza imbere ubworozi]]
 * '''RDB''' [[Ofisi y’Igihugu y’Ubukerarugendo]] (''Rwanda Development Board'')
 * '''RDSF''' Ingamba zigamije kwegereza abaturage ubuyobozi n’ubushobozi mu 
-* '''REMA''' [[Ikigo gishinzwe kubungabunga ibidukikije]]
+* '''REMA''' [[Ikigo cy’Igihugu cyo Kubungabunga Ibidukikije]] cyangwa Ikigo gishinzwe kubungabunga ibidukikije (''Rwanda Environment Management Authority'')
 * '''[[RIEPA]]'''
 * '''RPPA''' [[Ikigo cy’Igihugu gishinzwe Gutunganya Amasoko ya Leta]] (cyangwa Ikigo cy’igihugu gishinzwe gutanga amasoko ya Leta)
 * '''RRA''' [[Ikigo cy’Imisoro n’Amahoro]]
