--- a/Inteko_Ishinga_Amategeko_y’u_Rwanda.mw
+++ b/Inteko_Ishinga_Amategeko_y’u_Rwanda.mw
@@ -24,6 +24,9 @@ Umutwe w’Abadepite ugizwe n’Abadepite 80 bakomoka aha hakurikira :
 # Komisiyo y’Imibereho y’Abaturage
 # Komite ishinzwe imyitwarire n’imyifatire y’Abadepite no guku 
 
+== Imiyoboro ==
+*[http://www.parliament.gov.rw/re/ www.parliament.gov.rw]
+
 [[Category:Rwanda]]
 
 [[en:Parliament of Rwanda]]
