--- a/Igiturukiya.mw
+++ b/Igiturukiya.mw
@@ -22,3 +22,128 @@
 
 
 [[Category:Ururimi]]
+
+[[ace:Bahsa Tureuki]]
+[[af:Turks]]
+[[als:Türkische Sprache]]
+[[an:Idioma turco]]
+[[ar:لغة تركية]]
+[[arc:ܠܫܢܐ ܛܘܪܩܝܐ]]
+[[arz:توركى]]
+[[ast:Turcu]]
+[[az:Türk dili]]
+[[ba:Төрөк теле]]
+[[bar:Tiakische Sproch]]
+[[bat-smg:Torku kalba]]
+[[be:Турэцкая мова]]
+[[be-x-old:Турэцкая мова]]
+[[bg:Турски език]]
+[[bn:তুর্কি ভাষা]]
+[[br:Turkeg]]
+[[bs:Turski jezik]]
+[[ca:Turc]]
+[[ceb:Pinulongang Turko]]
+[[ckb:تورکی]]
+[[crh:Türk tili]]
+[[cs:Turečtina]]
+[[csb:Tërecczi jãzek]]
+[[cv:Турккă чĕлхи]]
+[[cy:Tyrceg]]
+[[da:Tyrkisk (sprog)]]
+[[de:Türkische Sprache]]
+[[diq:Tırki]]
+[[el:Τουρκική γλώσσα]]
+[[en:Turkish language]]
+[[eo:Turka lingvo]]
+[[es:Idioma turco]]
+[[et:Türgi keel]]
+[[eu:Turkiera]]
+[[fa:زبان ترکی استانبولی]]
+[[fi:Turkin kieli]]
+[[fo:Turkiskt (mál)]]
+[[fr:Turc]]
+[[fy:Turksk]]
+[[ga:An Tuircis]]
+[[gag:Türk dili]]
+[[gl:Lingua turca]]
+[[gv:Turkish]]
+[[hak:Thú-ngí-khì-ngî]]
+[[he:טורקית]]
+[[hi:तुर्की भाषा]]
+[[hif:Turkish bhasa]]
+[[hr:Turski jezik]]
+[[hsb:Turkowšćina]]
+[[hu:Török nyelv]]
+[[hy:Թուրքերեն]]
+[[id:Bahasa Turki]]
+[[io:Turkiana linguo]]
+[[is:Tyrkneska]]
+[[it:Lingua turca]]
+[[ja:トルコ語]]
+[[jv:Basa Turki]]
+[[ka:თურქული ენა]]
+[[kk:Түрік тілі]]
+[[ko:터키어]]
+[[ku:Zimanê tirkî]]
+[[kv:Туреч кыв]]
+[[kw:Turkek]]
+[[ky:Анадолу Түркчөсү]]
+[[la:Lingua Turcica]]
+[[lad:Lingua turkana]]
+[[lbe:Туркнал маз]]
+[[li:Törks]]
+[[lmo:Lengua türca]]
+[[lt:Turkų kalba]]
+[[lv:Turku valoda]]
+[[mdf:Туркань кяль]]
+[[mk:Турски јазик]]
+[[ml:തുര്‍ക്കി ഭാഷ]]
+[[mr:तुर्की भाषा]]
+[[ms:Bahasa Turki]]
+[[nl:Turks]]
+[[nn:Tyrkisk språk]]
+[[no:Tyrkisk]]
+[[nv:Tʼóok bizaad]]
+[[oc:Turc]]
+[[os:Туркаг æвзаг]]
+[[pl:Język turecki]]
+[[pms:Lenga turca]]
+[[pnb:ترک بولی]]
+[[pt:Língua turca]]
+[[qu:Turku simi]]
+[[rm:Lingua tirca]]
+[[ro:Limba turcă]]
+[[roa-rup:Limba turtseascã]]
+[[ru:Турецкий язык]]
+[[sah:Түрк тыла]]
+[[sc:Lìngua turca]]
+[[sco:Turkis leid]]
+[[se:Durkkagiella]]
+[[sh:Turski jezik]]
+[[simple:Turkish language]]
+[[sk:Turečtina]]
+[[sl:Turščina]]
+[[sq:Gjuha turke]]
+[[sr:Турски језик]]
+[[su:Basa Turki]]
+[[sv:Turkiska]]
+[[sw:Kituruki]]
+[[szl:Turecko godka]]
+[[ta:துருக்கிய மொழி]]
+[[tg:Забони туркӣ]]
+[[th:ภาษาตุรกี]]
+[[tk:Türk dili]]
+[[tl:Wikang Turko]]
+[[tr:Türkçe]]
+[[tt:Törek tele]]
+[[ug:تۈرك تىلى]]
+[[uk:Турецька мова]]
+[[ur:ترک زبان]]
+[[uz:Turk tili]]
+[[vec:Lengua turca]]
+[[vi:Tiếng Thổ Nhĩ Kỳ]]
+[[wa:Trouk (lingaedje)]]
+[[war:Tinurkiya]]
+[[yo:Èdè Túrkì]]
+[[zh:土耳其语]]
+[[zh-min-nan:Türkiye-gí]]
