*Empty MediaWiki Message*

--- a/Igiturukiya.mw
+++ b/Igiturukiya.mw
@@ -1,4 +1,4 @@
-[[File:MapOfTurkishSpeakers.png|thumb|350px|<font color="green">Ikarita y’Ikinyaturukiya</font>]]
+[[File:MapOfTurkishSpeakers.png|thumb|350px|<font color="grey">Ikarita y’Ikinyaturukiya</font>]]
 
 '''Ikinyaturukiya''' ni ururimi rw’[[abanyaturukiya]]. 
 
