*Empty MediaWiki Message*

--- a/Inteko_ishinga_amategeko.mw
+++ b/Inteko_ishinga_amategeko.mw
@@ -9,3 +9,83 @@
 *[[Inteko Ishinga amategeko ya Leta Zunze Ubumwe za Amerika]] 
 *[[Inteko Ishinga Amategeko y'uBusuwisi]] 
 *[[Inteko ishinga amategeko y'ubufaransa]]
+
+[[Category:Demokarasi]] 
+
+[[ar:برلمان]]
+[[ast:Parllamentu]]
+[[az:Məclis]]
+[[be:Парламент]]
+[[be-x-old:Парлямэнт]]
+[[bs:Parlament]]
+[[br:Parlamant]]
+[[bg:Парламент]]
+[[ca:Parlament]]
+[[cs:Parlament]]
+[[cy:Senedd]]
+[[da:Parlament]]
+[[de:Parlament]]
+[[et:Parlament]]
+[[es:Parlamento]]
+[[eo:Parlamento]]
+[[eu:Parlamentu]]
+[[fa:پارلمان]]
+[[fr:Parlement]]
+[[ga:Parlaimint]]
+[[gd:Pàrlamaid]]
+[[gl:Parlamento]]
+[[gan:議會]]
+[[ko:의회]]
+[[hi:भारत की संसद]]
+[[hr:Parlament]]
+[[io:Parlamento]]
+[[id:Parlemen]]
+[[is:Þing]]
+[[it:Parlamento]]
+[[he:פרלמנט]]
+[[kn:ಸಂಸತ್ತು]]
+[[sw:Bunge]]
+[[ku:Parleman]]
+[[krc:Парламент]]
+[[lo:ສະພາ]]
+[[la:Parlamentum]]
+[[lv:Parlaments]]
+[[lb:Parlament]]
+[[lt:Parlamentas]]
+[[ln:Palemá]]
+[[hu:Parlament]]
+[[mk:Парламент]]
+[[mi:Pāremata]]
+[[arz:برلمان]]
+[[ms:Parlimen]]
+[[my:လွှတ်တော်]]
+[[nl:Parlement]]
+[[ja:議会]]
+[[no:Parlament]]
+[[nn:Parlament]]
+[[nrm:Parlément]]
+[[oc:Parlament]]
+[[ps:ولسي جرګه]]
+[[pl:Parlament]]
+[[pt:Parlamento]]
+[[ro:Parlament]]
+[[qu:Rimana huñunakuy]]
+[[ru:Парламент]]
+[[simple:Parliament]]
+[[sk:Parlament]]
+[[sl:Parlament]]
+[[so:Baarlamaan]]
+[[sr:Скупштина]]
+[[sh:Parlament]]
+[[fi:Parlamentti]]
+[[sv:Parlament]]
+[[tl:Batasan]]
+[[th:รัฐสภา]]
+[[tg:Парламент]]
+[[tr:Parlamento]]
+[[uk:Парламент]]
+[[ur:Parliament]]
+[[vi:Nghị viện]]
+[[wuu:议会]]
+[[yi:פארלאמענט]]
+[[zh:议会]]
