--- a/Inteko_Ishinga_Amategeko_y’u_Rwanda.mw
+++ b/Inteko_Ishinga_Amategeko_y’u_Rwanda.mw
@@ -3,7 +3,7 @@
 '''Inteko Ishinga Amategeko y’u Rwanda''' yagiyeho nyuma y’ibihe by’inzibacyuho, binyuze mu matora yabaye ku itariki ya [[29 Nzeri]] kugeza tariki ya [[2 Ukwakira]] [[2003]].
 Yatangiye imirimo yayo ku itariki [[10 Ukwakira]] [[2003]], nyuma y’irahira ry’abagize imitwe yombi.
 
-Inteko Ishinga Amategeko y’u Rwanda igizwe n’Imitwe ibiri : [[Umutwe w’Abadepite]] na [[Sena]].
+[[Inteko Ishinga Amategeko]] y’u Rwanda igizwe n’Imitwe ibiri : [[Umutwe w’Abadepite]] na [[Sena]].
 
 Umutwe w’Abadepite ugizwe n’Abadepite 80 bakomoka aha hakurikira :
 # Abadepite 53 batowe ku rwego rw’Igihugu ;
