*Empty MediaWiki Message*

--- a/Inteko_Ishinga_Amategeko_y’u_Rwanda.mw
+++ b/Inteko_Ishinga_Amategeko_y’u_Rwanda.mw
@@ -1,6 +1,6 @@
 [[File:Coat of arms of Rwanda.svg|thumb|250px|<font color="grey"> </font>]]
 
-'''Inteko Ishinga Amategeko y’u Rwanda''' yagiyeho nyuma y’ibihe by’inzibacyuho, binyuze mu matora yabaye ku itariki ya [[29 Nzeri]] kugeza tariki ya [[2 Ukwakira]] [[2003]].
+'''[[Inteko Ishinga Amategeko]] y’u Rwanda''' yagiyeho nyuma y’ibihe by’inzibacyuho, binyuze mu matora yabaye ku itariki ya [[29 Nzeri]] kugeza tariki ya [[2 Ukwakira]] [[2003]].
 Yatangiye imirimo yayo ku itariki [[10 Ukwakira]] [[2003]], nyuma y’irahira ry’abagize imitwe yombi.
 
 [[Inteko Ishinga Amategeko]] y’u Rwanda igizwe n’Imitwe ibiri : [[Umutwe w’Abadepite]] na [[Sena]].
