--- a/Kinyarwanda.mw
+++ b/Kinyarwanda.mw
@@ -31,6 +31,48 @@ Ikinyarwanda kandi gifitemo amagambo menshi asa nayo mu rurimi rwitwa isiZULU rw
 |}
 
 == ==
+{| class="wikitable" style="text-align: center"
+! rowspan="2" | Class
+! colspan="2" | Singular
+! colspan="2" | Plural
+|-
+! Noun
+! Possessive
+! Noun
+! Possessive
+|-
+! 1
+| umu || wa || aba || ba
+|-
+! 2
+| umu || wa || imi || ya
+|-
+! 3
+| i, in || ya || i, in || za
+|-
+! 4
+| iki || cya || ibi || bya
+|-
+! 5
+| i(ri) || rya || ama || ya
+|-
+! 6
+| uru || rwa || in || za
+|-
+! 7
+| aka || ka || utu || twa
+|-
+! 8
+| ubu || bwa || ama || ya
+|-
+! 9
+| uku || kwa || ama || ya
+|-
+! 10
+| aha || ha ||  || 
+|}
+
+== ==
 {|class=wikitable
 ! !! !! !! !! !! !! !! || || 
 |-
