--- a/Kinyarwanda.mw
+++ b/Kinyarwanda.mw
@@ -32,14 +32,14 @@ Ikinyarwanda kandi gifitemo amagambo menshi asa nayo mu rurimi rwitwa isiZULU rw
 
 == ==
 {| class="wikitable" style="text-align: center"
-! rowspan="2" | Class
-! colspan="2" | Singular
-! colspan="2" | Plural
+! rowspan="2" | "Class"
+! colspan="2" | umugereka 
+! colspan="2" | ubuke 
 |-
-! Noun
-! Possessive
-! Noun
-! Possessive
+! "Noun"
+! "Possessive"
+! "Noun"
+! "Possessive"
 |-
 ! 1
 | umu || wa || aba || ba
