--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -130,6 +130,7 @@
 
 == W ==
 * '''WCO''' [[Mpuzamahanga Ushinzwe za Gasutamo]] (''World Customs Organization'')
+* '''WHO''' Umuryango w’abibumbye wita ku buzima 
 * '''WTO''' [[Umuryango Mpuzamahanga w’Ubucuruzi]] (''World Trade Organization'')
 * '''WWF''' [[Ikigega Mpuzamahanga Gishinzwe Umutungo Kamere]] (''World Wide Fund for Nature'')
 
