--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -98,6 +98,7 @@
 * '''NISR''' Ikigo cy’igihugu gishinzwe ibarurishamibare
 
 == O ==
+* '''OMS''' Umuryango w’abibumbye wita ku buzima 
 * '''ONU''' [[Umuryango w’Abibumye]]
 * '''ORINFOR''' [[Ikigo cy’Igihugu gishinzwe Itangazamakuru]]
 * '''ORTPN ''' [[Ofisi y'Igihugu y'Ubukerarugendo na Pariki]]
