--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -122,8 +122,9 @@
 * '''SJADF''' Ihuriro ry’imiryango ku Mirenge igamije iterambere
 * '''SME/SMI''' Ibigo n’Inganda nto n’iziciriritse
 
-== ==
+== U ==
 * '''UN''' cyangwa '''UNO''' [[Umuryango w’Abibumye]] (''United Nations'' cyangwe ''United Nations Organization'' )
+* '''UNİCEF''' Umuryango w’abibumye ryita ku bana
 
 == V ==
 * '''VAT''' Umusoro ku Nyongeragaciro
