*Empty MediaWiki Message*

--- a/Umupira_w’amaguru.mw
+++ b/Umupira_w’amaguru.mw
@@ -1,4 +1,4 @@
-[[File:Football iu 1996.jpg|thumb|250px|<font color="green">Umupira w'Amaguru</font>]]
+[[File:Football iu 1996.jpg|thumb|250px|<font color="grey">Umupira w'Amaguru</font>]]
 
 '''Umupira w'Amaguru''' (izina mu [[Cyongereza]] ''Football'' )
 
