--- a/Gusiramura.mw
+++ b/Gusiramura.mw
@@ -1,4 +1,4 @@
-[[File:Plastibell circumcision.jpg|thumb|250px|<font color="green">Gusiramura</font>]]
+[[File:Plastibell circumcision.jpg|thumb|250px|<font color="grey">Gusiramura</font>]]
 
 '''Gusiramura''' ni uburyo bumwe bugendanye n’isuku ikorwa ku mubiri w’igitsina gabo by’umwihariko ku bwambure bw’umugabo cyangwa mu yindi mvugo havugwa ''[[igitsina cy’umugabo]]'' cyangwa ''igitsina cy’umwana w’umuhungu''.
 
@@ -12,11 +12,11 @@ Ariko rimwe na rimwe ahabazwe mu gihe cyo gusiramura hasigara inkovu, hari abaga
 
 Hari abantu usanga barwanya iki gikorwa mu bihugu byateye imbere kuburyo bakora amashyirahamwe abirwanya. Kubwabo banga ko abana babagwa kandi ntabyo baba basabye. Bakaba bumva ko bajya bareka abana bagakura akaba aribo bihitiramo kwisiramuza igihe bumva babishatse. 
 
-[[File:Egypt circ.jpg|thumb|left|250px|<font color="green">Misiri (cya kera)</font>]]
+[[File:Egypt circ.jpg|thumb|left|250px|<font color="grey">Misiri (cya kera)</font>]]
 
 Mu bihugu bikiri mu nzira y’amajyambere aho amazi atoroshye kubona, gisiramura bifasha mu buryo bw’isuku. Kuko hari umwanda ugenda wibika munsi y’agahu gapfundikiye umutwe w’igitsina. Iyo rero igitsina gisiramuye uwo mwanda ntawubaho. Ku badasiramuye bari ahantu hahora amazi, ni ngombwa koga buri munsi maze ugasunika agahu gapfundikiye igitsina kugirango woze umwanda wibika munsi yako.
 
-[[File:Covenant of Abraham.JPG|thumb|250px|<font color="green">Ni umuco wahozeho kera mu bayahudi</font>]]
+[[File:Covenant of Abraham.JPG|thumb|250px|<font color="grey">Ni umuco wahozeho kera mu bayahudi</font>]]
 
 Gusiramura ni ugukuraho uruhu ruto ruzengurutse igitsina cy’umugabo uhereye ku mutwe wacyo, ukaba ari umuco wamamaye cyane mu Bayahudi bitewe n’imyemerere yabo, aho basiramuraga umwana w’umuhungu umaze iminsi 8 avutse.
 
@@ -32,7 +32,7 @@ Hari igihe gusiramura bikorwa nko kuvura, urugero nk’igihe agahu gapfundikira 
 Umugabo usiramuye asohora nk’umundi mugabo wese udasiramuye. Gusiramura ntacyo bihindura ku gusohora, ntibyongera igihe ntibinakigabanya.
 
 == Urugero ==
-[[File:Circumcision central Asia2.jpg|thumb|left|250px|<font color="green"></font>]]
+[[File:Circumcision central Asia2.jpg|thumb|left|250px|<font color="grey"></font>]]
 
 Nko kuba waracitse akaguru bitewe n’impanuka runaka, cyangwa ugacika akaboko cyangwa amaguru abiri, cyangwa yombi cyangwa se ubundi bumuga bwose waba ufite bitewe n’impanuka ariko ibindi bice byose by’umubiri bikora, ibyo byose twavuze ntibyakubuza kwisiramuza kuko ntacyo byaguhungabanya ku buzima bwawe usanganywe.
 
@@ -43,7 +43,7 @@ Twavuze ku mwana ufite icyumweru kimwe, cyangwa se ukivuka, tuvuga no ku musore 
 Aha rero kumvikanisha ko buri mugabo wese atisiramuza yakwihutira kwisiramuza kuberako ari isuku kuri we nk’uko twigeze kubivugaho haruguru kuko birinda n’indwara zandurira mumibonano mpuzabitsina nku’ko muri buze kubisanga muri iki gitabo.
 
 == Gusiramura na [[SIDA]] ==
-[[File:Japanese,ultra high,circumcision style.JPG|thumb|250px|<font color="green">Gusiramura</font>]]
+[[File:Japanese,ultra high,circumcision style.JPG|thumb|250px|<font color="grey">Gusiramura</font>]]
 
 Igihe habayeho imibonano mpuzabitsina idakingiye (nta gakingirizo), ibyago byo kwandura [[SIDA]] ku mugabo usiramuye ni bike ugereranyije n’udasiramuye. Biterwa n’uko gusiramura bituma umubiri ugize umutwe w’igitsina ukomera, igihe umutwe ugipfundikiwe na kagahu ubaworoshye cyane. Uko koroha niko guha inzira virusi itera SIDA mu gihe cy’imibonano idakingiye. Ariko ntibivuzeko abasiramuye batayandura n’ubwo bo atari cyane nk’udasiramuye.
 
