--- a/Kirundi.mw
+++ b/Kirundi.mw
@@ -1,7 +1,7 @@
 '''Ikirundi''' ni urulimi rw'[[Abarundi]]. Ikirundi gisa n'[[kinyarwanda|Ikinyarwanda]], urulimi rw'u [[Rwanda]], n'Igiha, urulimi rwo muri [[Tanzaniya]].
 
 [[Category:Afurika]]
-[[Category:Ururimi]]
+[[Category:Indimi]]
 [[Category:Burundi]]
 
 [[az:Kirundi]]
