--- a/Ikidage.mw
+++ b/Ikidage.mw
@@ -39,7 +39,7 @@ Umwana = ein Kind
 
 {{DEFAULTSORT:Dage}}
 
-[[Category:Ururimi]]
+[[Category:Indimi]]
 [[Category:Abadage]] 
 
 [[ab:Алман бызшәа]]
