--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -136,7 +136,7 @@
 * '''WTO''' [[Umuryango Mpuzamahanga w’Ubucuruzi]] (''World Trade Organization'')
 * '''WWF''' [[Ikigega Mpuzamahanga Gishinzwe Umutungo Kamere]] (''World Wide Fund for Nature'')
 
-[[Category:Ururimi]]
+[[Category:Indimi]]
 
 [[ar:اختصار]]
 [[az:Abbreviatura]]
